--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con vardhika jain</h1>
+                    <h1>Ristorante con vini jain</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm">
@@ -38,11 +38,10 @@
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
             </div>
         </div>
-
+    
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-sm-3">
-                <h3>This Month's Promotions</h3>
+            <div class="col-12 col-sm-4 col-sm-3"> <h3>This Month's Promotions</h3>
             </div>
             <div class="col-12 col-sm col-sm-md">
                 <h2>Weekend Grand Buffet</h2>
