--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
 
                 </span>
             </button>
-            <a class="navbar-brand mr-auto" href="./aboutus.html" > restaurant con fusion</a>
+            <a class="navbar-brand mr-auto" href="./aboutus.html" ><img src="_15c0362a3a49b2e1febe1fe3a7a7a63f_img/img/logo.png" height="30" width="40"></a>
             <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item "> <a class="nav-link" href="./index.html"> <span class="fa fa-home fa-lg"></span>Home </a>
@@ -56,7 +56,9 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="_15c0362a3a49b2e1febe1fe3a7a7a63f_img/img/logo.png" class="img-fluid">
+                    
                 </div>
             </div>
         </div>
@@ -81,7 +83,37 @@
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div>
+            <div class="col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">
+                        Facts At A Glance
+
+                    </h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Start</dt>
+                            <dd class="col-6">3-12-1999</dd>
+                            <dt class="col-6">Places</dt>
+                            <dd class="col-6">14</dd>
+                            <dt class="col-6">HR</dt>
+                            <dd class="col-6">Tommy Shelby</dd>
+                        </dl>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-6">
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">You better cut the pizza in 4 pieces because I'm not hungry enough for 6</p>
+                        <footer class="blockquote-footer">Vardhika Jain</footer>
+                        <cite title="Source title">Vardhika's Great Wisdom</cite>
+                    </blockquote>
+                </div>
+            </div>
+        
             </div>
         </div>
 
@@ -99,6 +131,55 @@
                 <h3>Alberto Somayya <small>Executive Chef</small></h3>
                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
+       </div>
+       <div class="row row-content">
+           <div class="col-12 col-sm-9">
+               <h2>Fig &amp; Figures</h2>
+               <div class="table-responsive">
+                   <table class="table table-striped">
+                       <thread class="thread thread-dark">
+                           <tr>
+                               <th>&nbsp</th>
+                               <th>2013</th>
+                               <th>2014</th>
+                               <th>2015</th>
+                           </tr>
+
+                       </thread>
+                       <tr>
+                           <th>Employees</th>
+                           <td>20</td>
+                           <td>100</td>
+                           <td>50</td>
+                       </tr>
+                       <tr>
+                           <th>Guests served</th>
+                           <td>2</td>
+                           <td>10</td>
+                           <td>5</td>
+                       </tr>
+                       <tr>
+                       <th>Special Events</th>
+                       <td>6</td>
+                       <td>5</td>
+                       <td>1</td>
+                       </tr>
+                       <tr>
+                           <th>Annual Income</th>
+                           <td>20000000</td>
+                           <td>122739812</td>
+                           <td>94878237</td>
+                       </tr>
+
+                   </table>
+
+               </div>
+
+           </div>
+           <div class="col-sm-12 col-sm-3">
+
+           </div>
+
        </div>
 
     </div>
